# SynAI

./: AnalyticsRepository.kt  BenchmarkUtils.kt  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CalendarRepository.kt  CalendarRepositoryImpl.kt  DISTRIBUTION_GUIDE.md  Dashboard.kt  ExportImportRepository.kt  ExportImportRepositoryImpl.kt  FirebasePerformanceBenchmark.kt  IMPLEMENTATION_STATUS.md  MainActivity.kt  MeetingRepository.kt  MeetingRepositoryImpl.kt  MeetingShareRepository.kt  NotificationScreenshotTest.kt  NotificationUITest.kt  PreferencesRepository.kt  PreferencesRepositoryImpl.kt  README.md  SynapseAIApplication.kt  SyncRepository.kt  UserRepository.kt  advanced_bot_architecture.md  build.gradle  build_release.bat  development_plan.md  google-services.json  gradle-wrapper.properties  gradle.properties  gradlew.bat  proguard-rules.pro  settings.json
.github/: FUNDING.yml
Advertisements/: advertisement_assets_overview.md  advertisement_concepts.md
Business_Plan/: Coping_Roulette_Business_Plan.md
Press_Release/: Coping_Roulette_Press_Release.md
Website/: website_content_outline.md
bot-system/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot-system/config/: default.yaml
bot-system/src/: __init__.py  main.py
bot-system/src/api/: __init__.py  routes.py  webhooks.py
bot-system/src/core/: __init__.py  ai_text_detection_module.py  command_interface.py  self_aware_module.py  self_healing_coding_module.py  text_humanization_module.py
bot-system/src/models/: __init__.py  conversation_model.py  system_state_model.py  user_model.py
bot-system/src/utils/: __init__.py  config_manager.py  logger.py
(+18 files in other folders)
